# Odoo-Build

./: .dockerignore  .env  .env.odoo  .env.template  .git-checkout-files  .git-reset-files  .gitignore  .gitmodules  .pre-commit-config.yaml  .vercelignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  TODO.md  Taskfile.yml  compile-managed-modules  compose.yml.template  docker-compose.yml  docker-compose.yml.template  docker-odoo-install  managed_modules.txt  modules.md  odoo-backup  odoo.conf.template  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  register-module-repos  rename_snippets.py  requirements.txt  revisions.md  shell.nix  snippets.md  task  task.md  upgrade.md
.obsidian/: app.json
.vuepress/: config.js  sidebar.js  sidebar_snippet.js
config/: addons_path  checkout-files  checkout_files  ir_mail_server.csv  odoo-native.conf  odoo-src.conf  odoo.conf  remove_files  servers.json
data/: email.txt  fetchmail_server.csv  ir_mail_server.csv  mint_system.calendar.view_calendar_event_calendar_timeline.xml  mint_system.res_groups.holidays_self_responsible.xml
image/: Dockerfile  Dockerfile.mintsystem.odoo  Dockerfile.odoo  README.md  entrypoint.sh  odoo.conf.template  requirements.txt
images/: README.md
k8s/: odoo-cm.yaml  odoo-deploy.yaml  odoo-svc.yaml  odoo17-deploy.yaml  postgres-cm.yaml  postgres-deploy.yaml  postgres-pvc.yaml  postgres-svc.yaml  postgres.yml
prompts/: 01_rename-snippets-files.md  02_new-module-snippet-manager.md  03_setup-tests-for-kubectl-module.md  04_create-secrets-on-helm-chart-install.md  05_create-new-menu-for-helm-values.md  06_evaluate-helm-values.md  07_controller-for-extra-checkout-step-in-website-sale-helm.md  08_kubectl-cluster-with-default-context.md  (+22 more)
(+4239 files in other folders)
