[build-system]
requires = ["hatchling", "hatch-odoo"]
build-backend = "hatchling.build"

[project]
name = "odoo-build"
version = "1.0"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.odoo-addons-dependencies]
[tool.hatch.build.hooks.odoo-addons-dirs]
[tool.hatch-odoo]
odoo_version_override = "18.0"
dependencies = ["odoo-apps-Odoo-Apps-Server-Tools"]
addons_dirs = ["."]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
extend-select = ["I", "F", "UP", "TID", "YTT", "E", "W"]
exclude = ["venv*", ".venv*"]
fix = true
unsafe-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"