[project]
name = "odoo-build"
version = "0.1.0"
description = "This is the Mint System Odoo development environment."
readme = "README.md"
dependencies = [
    # Container
    "podman-compose",
    # Testing
    "pre-commit",
    "pyyaml",
    "coverage",
    "pylint-odoo",
    "pytest-odoo",
    # Setup
    "setuptools",
    "wheel",
    "watchdog",
    "pdfminer.six",
    "debugpy",
    # Performance
    "py-spy",
    "memray",
    # LLM
    "fastmcp; python_version >= '3.10'",
    "requests",
    # Upgrade
    "openupgradelib @ git+https://github.com/OCA/openupgradelib.git@master",
    "odoo-upgrade @ git+https://github.com/odoo/upgrade-util@master ; python_version <= '3.12'",
    # OCA Tools
    "manifestoo",
    "oca-port",
    "odoo-module-migrator",
    "click-odoo-contrib",
    "git-aggregator",
    "oca-maintainers-tools @ git+https://github.com/OCA/maintainer-tools",
    "hatch-odoo",
    "copier",
]
